// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DockerBootstrapBuilder > should build a complete script with default options 1`] = `
"set -euo pipefail
mkdir -p "$HOME/.config" "$HOME/.codex" "$HOME/.claude" "$HOME/.gemini"
sync_dir_contents() { local source="$1"; local destination="$2"; local label="$3"; mkdir -p "$destination"; if ! cp -r "$source/." "$destination/"; then echo "provider-runner: warning: failed to copy $label credentials" >&2; fi; }
if [ -e "/opt/credentials/gitconfig" ]; then cp -f "/opt/credentials/gitconfig" "$HOME/.gitconfig" || echo "provider-runner: warning: failed to copy .gitconfig" >&2; fi
if [ -d "/opt/credentials/codex" ]; then [ -f "/opt/credentials/codex/auth.json" ] && cp -f "/opt/credentials/codex/auth.json" "$HOME/.codex/auth.json"; [ -f "/opt/credentials/codex/config.toml" ] && cp -f "/opt/credentials/codex/config.toml" "$HOME/.codex/config.toml"; fi
if [ -d "/opt/credentials/gh" ]; then sync_dir_contents "/opt/credentials/gh" "$HOME/.config/gh" "gh"; fi
if [ -d "/opt/credentials/gemini" ]; then sync_dir_contents "/opt/credentials/gemini" "$HOME/.gemini" "gemini"; fi
export NPM_CONFIG_PREFIX="/runtime/npm-global"
export NPM_CONFIG_CACHE="/runtime/npm-cache"
export npm_config_cache="$NPM_CONFIG_CACHE"
mkdir -p "$NPM_CONFIG_PREFIX" "$NPM_CONFIG_CACHE"
export PATH="$HOME/.local/bin:$NPM_CONFIG_PREFIX/bin:$PATH"
if [ -f "/opt/jules/setup.sh" ]; then bash "/opt/jules/setup.sh" || echo "provider-runner: setup script failed" >&2; fi
if ! command -v "$1" >/dev/null 2>&1; then case "$1" in     gemini) npm install -g @google/gemini-cli ;;     codex) npm install -g @openai/codex ;;     claude) if command -v curl >/dev/null 2>&1; then curl -fsSL https://claude.ai/install.sh | bash && export PATH="$HOME/.local/bin:$PATH"; else echo "provider-runner: curl not found; cannot install claude" >&2; fi ;; esac; fi
if [ "$1" = "claude" ]; then
  if [ -f "/opt/credentials/claude-code/.credentials.json" ]; then cp -f "/opt/credentials/claude-code/.credentials.json" "$HOME/.claude/.credentials.json"; fi
  if [ -f "/opt/credentials/claude-code-auth.json" ]; then cp -f "/opt/credentials/claude-code-auth.json" "$HOME/.claude.json"; fi
fi
exec "$@""
`;

exports[`DockerBootstrapBuilder > should handle claude specific auth 1`] = `
"set -euo pipefail
mkdir -p "$HOME/.config" "$HOME/.codex" "$HOME/.claude" "$HOME/.gemini"
sync_dir_contents() { local source="$1"; local destination="$2"; local label="$3"; mkdir -p "$destination"; if ! cp -r "$source/." "$destination/"; then echo "provider-runner: warning: failed to copy $label credentials" >&2; fi; }
if [ -e "/opt/credentials/gitconfig" ]; then cp -f "/opt/credentials/gitconfig" "$HOME/.gitconfig" || echo "provider-runner: warning: failed to copy .gitconfig" >&2; fi
if [ -d "/opt/credentials/codex" ]; then [ -f "/opt/credentials/codex/auth.json" ] && cp -f "/opt/credentials/codex/auth.json" "$HOME/.codex/auth.json"; [ -f "/opt/credentials/codex/config.toml" ] && cp -f "/opt/credentials/codex/config.toml" "$HOME/.codex/config.toml"; fi
if [ -d "/opt/credentials/gh" ]; then sync_dir_contents "/opt/credentials/gh" "$HOME/.config/gh" "gh"; fi
if [ -d "/opt/credentials/gemini" ]; then sync_dir_contents "/opt/credentials/gemini" "$HOME/.gemini" "gemini"; fi
export NPM_CONFIG_PREFIX="/runtime/npm-global"
export NPM_CONFIG_CACHE="/runtime/npm-cache"
export npm_config_cache="$NPM_CONFIG_CACHE"
mkdir -p "$NPM_CONFIG_PREFIX" "$NPM_CONFIG_CACHE"
export PATH="$HOME/.local/bin:$NPM_CONFIG_PREFIX/bin:$PATH"
if [ -f "/opt/jules/setup.sh" ]; then bash "/opt/jules/setup.sh" || echo "provider-runner: setup script failed" >&2; fi
if ! command -v "$1" >/dev/null 2>&1; then case "$1" in     gemini) npm install -g @google/gemini-cli ;;     codex) npm install -g @openai/codex ;;     claude) if command -v curl >/dev/null 2>&1; then curl -fsSL https://claude.ai/install.sh | bash && export PATH="$HOME/.local/bin:$PATH"; else echo "provider-runner: curl not found; cannot install claude" >&2; fi ;; esac; fi
if [ "$1" = "claude" ]; then
  if [ -f "/opt/credentials/claude-code/.credentials.json" ]; then cp -f "/opt/credentials/claude-code/.credentials.json" "$HOME/.claude/.credentials.json"; fi
  if [ -f "/opt/credentials/claude-code-auth.json" ]; then cp -f "/opt/credentials/claude-code-auth.json" "$HOME/.claude.json"; fi
fi
exec "$@""
`;

exports[`DockerBootstrapBuilder > should include fallback install cases for specified providers 1`] = `
"set -euo pipefail
mkdir -p "$HOME/.config" "$HOME/.codex" "$HOME/.claude" "$HOME/.gemini"
sync_dir_contents() { local source="$1"; local destination="$2"; local label="$3"; mkdir -p "$destination"; if ! cp -r "$source/." "$destination/"; then echo "provider-runner: warning: failed to copy $label credentials" >&2; fi; }
if [ -e "/opt/credentials/gitconfig" ]; then cp -f "/opt/credentials/gitconfig" "$HOME/.gitconfig" || echo "provider-runner: warning: failed to copy .gitconfig" >&2; fi
if [ -d "/opt/credentials/codex" ]; then [ -f "/opt/credentials/codex/auth.json" ] && cp -f "/opt/credentials/codex/auth.json" "$HOME/.codex/auth.json"; [ -f "/opt/credentials/codex/config.toml" ] && cp -f "/opt/credentials/codex/config.toml" "$HOME/.codex/config.toml"; fi
if [ -d "/opt/credentials/gh" ]; then sync_dir_contents "/opt/credentials/gh" "$HOME/.config/gh" "gh"; fi
if [ -d "/opt/credentials/gemini" ]; then sync_dir_contents "/opt/credentials/gemini" "$HOME/.gemini" "gemini"; fi
export NPM_CONFIG_PREFIX="/runtime/npm-global"
export NPM_CONFIG_CACHE="/runtime/npm-cache"
export npm_config_cache="$NPM_CONFIG_CACHE"
mkdir -p "$NPM_CONFIG_PREFIX" "$NPM_CONFIG_CACHE"
export PATH="$HOME/.local/bin:$NPM_CONFIG_PREFIX/bin:$PATH"
if [ -f "/opt/jules/setup.sh" ]; then bash "/opt/jules/setup.sh" || echo "provider-runner: setup script failed" >&2; fi
if ! command -v "$1" >/dev/null 2>&1; then case "$1" in     gemini) npm install -g @google/gemini-cli ;; esac; fi
if [ "$1" = "claude" ]; then
  if [ -f "/opt/credentials/claude-code/.credentials.json" ]; then cp -f "/opt/credentials/claude-code/.credentials.json" "$HOME/.claude/.credentials.json"; fi
  if [ -f "/opt/credentials/claude-code-auth.json" ]; then cp -f "/opt/credentials/claude-code-auth.json" "$HOME/.claude.json"; fi
fi
exec "$@""
`;

exports[`DockerBootstrapBuilder > should not include fallback install if no providers specified 1`] = `
"set -euo pipefail
mkdir -p "$HOME/.config" "$HOME/.codex" "$HOME/.claude" "$HOME/.gemini"
sync_dir_contents() { local source="$1"; local destination="$2"; local label="$3"; mkdir -p "$destination"; if ! cp -r "$source/." "$destination/"; then echo "provider-runner: warning: failed to copy $label credentials" >&2; fi; }
if [ -e "/opt/credentials/gitconfig" ]; then cp -f "/opt/credentials/gitconfig" "$HOME/.gitconfig" || echo "provider-runner: warning: failed to copy .gitconfig" >&2; fi
if [ -d "/opt/credentials/codex" ]; then [ -f "/opt/credentials/codex/auth.json" ] && cp -f "/opt/credentials/codex/auth.json" "$HOME/.codex/auth.json"; [ -f "/opt/credentials/codex/config.toml" ] && cp -f "/opt/credentials/codex/config.toml" "$HOME/.codex/config.toml"; fi
if [ -d "/opt/credentials/gh" ]; then sync_dir_contents "/opt/credentials/gh" "$HOME/.config/gh" "gh"; fi
if [ -d "/opt/credentials/gemini" ]; then sync_dir_contents "/opt/credentials/gemini" "$HOME/.gemini" "gemini"; fi
export NPM_CONFIG_PREFIX="/runtime/npm-global"
export NPM_CONFIG_CACHE="/runtime/npm-cache"
export npm_config_cache="$NPM_CONFIG_CACHE"
mkdir -p "$NPM_CONFIG_PREFIX" "$NPM_CONFIG_CACHE"
export PATH="$HOME/.local/bin:$NPM_CONFIG_PREFIX/bin:$PATH"
if [ -f "/opt/jules/setup.sh" ]; then bash "/opt/jules/setup.sh" || echo "provider-runner: setup script failed" >&2; fi
if [ "$1" = "claude" ]; then
  if [ -f "/opt/credentials/claude-code/.credentials.json" ]; then cp -f "/opt/credentials/claude-code/.credentials.json" "$HOME/.claude/.credentials.json"; fi
  if [ -f "/opt/credentials/claude-code-auth.json" ]; then cp -f "/opt/credentials/claude-code-auth.json" "$HOME/.claude.json"; fi
fi
exec "$@""
`;
